# archonx-os

./: # 📦 COMPLETE GITHUB REPOSITORY LIS.txt  .dockerignore  .env.example  .gitignore  .gitmodules  .ralphy.json  AGENTS.md  AGENT_QUICKSTART.md  ARCHONX_DUAL_CREW_SPEC.md  ARCHONX_PRIME_DIRECTIVE_v1.0.md  ARCHONX_UNIFIED_AGENT_SYSTEM_PROMPT_v2.0.md  BOOTSTRAP_COMPLETE.md  BUILD_SUMMARY.md  Building a Future-Proof Autonomous.txt  CHANGELOG.md  CLAUDE_CODE_OPTIMIZED_PROMPT.md  CLOUDCODE_INTEGRATION.md  COMMANDS_TO_USE.md  CONTRIBUTING.md  DELIVERY_MANIFEST.md  DESKTOP_APP_ASSESSMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_DELIVERY_REPORT.md  FINAL_HANDOVER_ZTE.md  HANDOFF_ARCHONX.md  HANDOFF_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MISSION_BRIEF_COMPREHENSIVE_AUDIT_AND_HANDOFF.md  PAULI_NULLCLAW_INTEGRATION_ANALYSIS.md  PRD_PHASE_2_TO_8.md  RAINBOW_INDEX.md  README.md  REPO_AWARENESS_QUICKSTART.md  SECURITY.md  STRUCTURE.md  SYSTEM_ARCHITECTURE.txt  ai_advisor.py  archon_x_zte_super_prompt_spec_kit.md  archonx-config.json  (+6 more)
.archonx/: AGENTS.md  ARCHONX.json  HEART.md  OWNERSHIP.md  SOUL.md  TOOLBOX.md  reportback.json  toolbox.json
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.claude/: settings.local.json
12-rules-agents.md/: ARCHONX_AGENT_SYSTEM_PROMPT.md  AUTONOMOUS_SYSTEM_GUIDE_NON_TECHNICAL.md  VSCODE_COPILOT_BUILD_PROMPT.md
ARCHON-X-OS/: Archon x training data.txt
IMPLEMENTATION_REPORTS/: CONX_LAYER_REPORT_2026-03-11.md
Open-brain-mcp-server/: DEPLOYMENT_GUIDE_OPEN_BRAIN_ARCHONX.md  IMPLEMENTATION_SUMMARY.md  OPEN_BRAIN_ARCHITECTURE_COMPLETE.md  PROJECT_ECOSYSTEM_MAPPING.md  QUICK_START_45_MINUTES.md  README.md  __init__.py  archonx_open_brain_integration.py  open_brain_mcp_server.py  requirements.txt  schema_check.py  start_open_brain.bat  start_open_brain.sh
agents/: __init__.py
archonx/: __init__.py  cli.py  kernel.py  paperclip.py  server.py
archonx-desktop/: .gitignore  README.md  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
archonx-rust/: Cargo.toml  Dockerfile  MIGRATION_NOTES.md  README.md
archonx-rust/archonx-agents/: Cargo.toml
archonx-rust/archonx-agents/src/: lib.rs  persona.rs  router.rs
archonx-rust/archonx-api/: Cargo.toml
archonx-rust/archonx-api/src/: main.rs  routes.rs
archonx-rust/archonx-billing/: Cargo.toml
archonx-rust/archonx-billing/src/: lib.rs  token_meter.rs
archonx-rust/archonx-core/: Cargo.toml
archonx-rust/archonx-core/src/: agent.rs  flywheel.rs  lib.rs  protocol.rs  types.rs
archonx-rust/archonx-graphbrain/: Cargo.toml
archonx-rust/archonx-graphbrain/src/: analyzer.rs  graph_builder.rs  lib.rs  main.rs  repo_indexer.rs  runtime.rs  work_orders.rs
archonx-rust/archonx-memory/: Cargo.toml
archonx-rust/archonx-memory/migrations/: 001_memory_entries.sql
archonx-rust/archonx-memory/src/: lib.rs  manager.rs
archonx-rust/archonx-orchestration/: Cargo.toml
archonx-rust/archonx-orchestration/src/: lib.rs  orchestrator.rs  swarm.rs
archonx-rust/archonx-revenue/: Cargo.toml
archonx-rust/archonx-revenue/src/: engine.rs  lib.rs
archonx-synthia/: .env.example  .gitignore  HANDOFF_SPEC.md  README.md  TODO_P1_THROUGH_P7.md
archonx-synthia/apps/server/: pyproject.toml
archonx-synthia/apps/server/app/: __init__.py  config.py  main.py
archonx-synthia/apps/server/app/routes/: agents.py  approvals.py  health.py  onboarding.py  runner.py  tasks.py  voice.py
chess-theater/: next.config.ts  package.json  tailwind.config.ts  vercel.json
core/: README.md  __init__.py
data/: ecosystem_registry.json
deployment/: README.md
docs/: FRANKENCLAW_ARCHITECTURE.md  RALPHY_LOOP_SOP.md  SOP_AUTONOMOUS_AGENCY.md  UNIVERSAL_PLATFORM_BLUEPRINT.md  WORKSPACE_PROVIDER_MODEL.md  canonical-controller-worker-topology.md  repo-awareness.md  routing.md
ecosystem/: manifest.canonical.json  manifest.json
files/: EXECUTIVE-SUMMARY.md  hustleclaude-additions-README.md  repo-status-and-deployment-guide.md
future-upgrades/: TOOLBOX_HTTP_SERVICE_TODO.md
git-hub-ecosystem/: SUPER_SYNC_SOP.md  cron-schedule-spec.md  github_repos_inventory.csv  github_repos_numbered.txt  github_repos_raw.json  repo-scout-charter.yaml  repos_001_050.txt  repos_051_100.txt  repos_101_150.txt  repos_151_200.txt  repos_201_250.txt  repos_251_300.txt  repos_301_316.txt  top15_priority_seed.txt
openclaw-integration/: README.md
ops/: RALPHY_IMPLEMENTATION_STATUS.md  repo_compare.py  test_phase3a.py
orgo-agent/: HANDOFF_PROMPT.md  QUICKSTART.md  README.md  SIMPLE_START.md
plans/: AGENT_LIGHTNING_USE_CASES.md  AGENT_ZERO_SOCIAL_MEDIA_TRAINING.md  ARCHONX_AUTONOMOUS_AGENCY_BLUEPRINT.md  ARCHONX_BUILD_PLAN_SYNTHESIS.md  ARCHONX_DASHBOARD_CONTROL_WORKFLOWS.md  ARCHONX_DOC_EXECUTION_MATRIX.md  ARCHONX_DOC_PATCH_LEDGER.md  ARCHONX_END_TO_END_EXECUTION_PRD.md  ARCHONX_FINAL_ARCHITECTURE_REPORT.md  ARCHONX_HUMAN_LOOP_MINIMIZATION_MAP.md  ARCHONX_MASTER_IMPLEMENTATION_TODO.md  ARCHONX_PHASED_IMPLEMENTATION_ROADMAP.md  ARCHONX_REALITY_MAP_AND_GAP_PLAN.md  ARCHONX_SECURE_AUTOMATION_PIPELINE.md  ARCHONX_SOP_AND_PROMPT_SYSTEM.md  ARCHONX_SPEC_DRIVEN_DOC_PATCH_AND_EXECUTION_PRD.md  ARCHONX_VOICE_AGENT_PRD_v1.md  BMAD_ENFORCER_SPEC.json  CHESS_THEATER_SPEC.json  DEVIKA_PI_GAP_MATRIX.md  DEVIKA_PI_IMPLEMENTATION_SEQUENCE.md  DEVIKA_PI_INTEGRATION_PLAN.md  DEVIKA_PI_RUNTIME_CONTRACT.md  HERMES_AGENT_SPEC.json  KING_MODE_GEMINI_31_PRD.md  MASTER_BUILD_PLAN.md  ONE_SHOT_PATCH_PROMPT.md  PHASE_1_EXECUTION_PACKET.md  POPEBOT_SPEC.json  PRODUCT_HUNT_LAUNCH_STRATEGY.md  SOUL_LOADER_SPEC.json  SYNTHIA_3_0_SPEC.json  archonx-12-agent-framework-plan.md  archonx-skills-completion-plan.md  implementation_todos.json  infinite-architecture-glm5.md  orgo-mcp-integration-plan.md
public/: app.css  app.js  index.html  llm.txt  robots.txt
scripts/: MEETING_TOOLS.md  archonx_daily_report.py  bootstrap_agents.py  bootstrap_dev_cli.ps1  check_meeting_completion.ps1  check_meeting_completion.py  cofounder_snapshot.py  conx-onboard.ps1  conx-onboard.sh  deploy_now.js  deploy_vercel.ps1  ingest_prompt_registry.py  meeting-self-improve.ps1  (+7 more)
(+779 files in other folders)
