[tool.poetry]
name = "archonx-os-monorepo"
version = "0.1.0"
description = "ArchonX Operating System - Monorepo"
authors = ["ArchonX Team"]
license = "Proprietary"
readme = "README.md"
packages = [
    { include = "archonx" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2.0"
fastapi = ">=0.110"
uvicorn = ">=0.27"
websockets = ">=12.0"
httpx = ">=0.27"
python-dotenv = ">=1.0"
structlog = ">=24.1"
apscheduler = ">=3.10"
redis = ">=5.0"
nicegui = ">=1.4"
stripe = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.3"
mypy = ">=1.8"
pre-commit = ">=3.6"
black = ">=24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
archonx = "archonx.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "01-main/01-main/software/tests", "Darya-designs-main/Darya-designs-main/tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
