[workspace]
members = [
  "archonx-core",
  "archonx-agents",
  "archonx-orchestration",
  "archonx-memory",
  "archonx-billing",
  "archonx-revenue",
  "archonx-graphbrain",
  "archonx-api",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rayon = "1"
dashmap = "5"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
