[package]
name = "archonx-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archonx-api"
path = "src/main.rs"

[dependencies]
archonx-core = { path = "../archonx-core" }
archonx-orchestration = { path = "../archonx-orchestration" }
archonx-billing = { path = "../archonx-billing" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
