[package]
name = "archonx-graphbrain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archonx-graphbrain"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
walkdir = "2"
ignore = "0.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
